[package]
name = "db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 SQLx Repository 구현체"

[features]
integration = []

[dependencies]
shared-kernel = { path = "../domain/core/shared-kernel", version = "0.1.0" }
user-domain = { path = "../domain/core/user", version = "0.1.0" }
listing-domain = { path = "../domain/core/listing", version = "0.1.0" }
listing-photo-domain = { path = "../domain/core/listing-photo", version = "0.1.0" }
admin-action-domain = { path = "../operations/admin-action", version = "0.1.0" }
api-health-domain = { path = "../operations/api-health", version = "0.1.0" }
audit-log-domain = { path = "../domain/audit/audit-log", version = "0.1.0" }
business-verification-queue-domain = { path = "../operations/business-verification-queue", version = "0.1.0" }
data-pipeline-control = { path = "../data-pipeline-control", version = "0.1.0" }
listing-report-domain = { path = "../operations/listing-report", version = "0.1.0" }
lrq-domain = { path = "../operations/listing-review-queue", version = "0.1.0" }
operations-meta-domain = { path = "../operations/operations-meta", version = "0.1.0" }
outbox-event-domain = { path = "../domain/audit/outbox-event", version = "0.1.0" }
bookmark-domain = { path = "../domain/insights/bookmark", version = "0.1.0" }
search-history-domain = { path = "../domain/insights/search-history", version = "0.1.0" }
analysis-report-domain = { path = "../domain/insights/analysis-report", version = "0.1.0" }
notification-domain = { path = "../domain/insights/notification", version = "0.1.0" }
raw-capture-client = { path = "../data-clients/raw-capture", version = "0.1.0" }
sqlx = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
geo-types = { workspace = true }
serde_json = { workspace = true }
bigdecimal = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
outbox-publisher = { path = "../outbox-publisher", version = "0.1.0" }
async-trait = { workspace = true }

[lints]
workspace = true
