load("//tools/bazel:rust_workspace.bzl", "gongzzang_rust_library_with_unit_test")

package(default_visibility = ["//visibility:public"])

gongzzang_rust_library_with_unit_test(
    name = "outbox_publisher",
    crate_name = "outbox_publisher",
    srcs = glob(["src/**/*.rs"]),
    internal_deps = [
        "//crates/domain/audit/outbox-event:outbox_event_domain",
        "//crates/domain/core/shared-kernel:shared_kernel",
    ],
)
