[package]
name = "outbox-publisher"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 outbox 이벤트 발행기 — Sink trait + tick 함수"

[dependencies]
shared-kernel = { path = "../domain/core/shared-kernel", version = "0.1.0" }
outbox-event-domain = { path = "../domain/audit/outbox-event", version = "0.1.0" }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }

[lints]
workspace = true
