[package]
name = "parcel-lookup"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "PNU parcel info lookup port backed by the Platform Core Catalog API"

[dependencies]
shared-kernel = { path = "../domain/core/shared-kernel", version = "0.1.0" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
