load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "repo_guard",
    crate_name = "repo_guard",
    crate_root = "src/main.rs",
    edition = "2021",
    srcs = [
        "src/main.rs",
        "src/guards/migration_version_prefixes.rs",
        "src/guards/mod.rs",
    ],
)

rust_test(
    name = "repo_guard_unit_test",
    crate_name = "repo_guard",
    crate_root = "src/main.rs",
    edition = "2021",
    srcs = [
        "src/main.rs",
        "src/guards/migration_version_prefixes.rs",
        "src/guards/mod.rs",
    ],
)
