load("//tools/bazel:rust_workspace.bzl", "gongzzang_rust_binary_with_unit_test")

package(default_visibility = ["//visibility:public"])

API_INTERNAL_DEPS = [
    "//crates/auth:auth",
    "//crates/circuit-breaker:circuit_breaker",
    "//crates/db:db",
    "//crates/domain/core/listing-photo:listing_photo_domain",
    "//crates/domain/core/listing:listing_domain",
    "//crates/domain/core/shared-kernel:shared_kernel",
    "//crates/domain/core/user:user_domain",
    "//crates/domain/insights/bookmark:bookmark_domain",
    "//crates/domain/insights/notification:notification_domain",
    "//crates/parcel-lookup:parcel_lookup",
]

gongzzang_rust_binary_with_unit_test(
    name = "api_service",
    crate_name = "api",
    crate_root = "src/main.rs",
    srcs = glob(["src/**/*.rs"]),
    internal_deps = API_INTERNAL_DEPS,
)

gongzzang_rust_binary_with_unit_test(
    name = "platform_core_anchor_import",
    crate_name = "platform_core_anchor_import",
    crate_root = "src/bin/platform_core_anchor_import.rs",
    srcs = glob(["src/**/*.rs"]),
    internal_deps = [
        "//crates/circuit-breaker:circuit_breaker",
        "//crates/db:db",
        "//crates/domain/core/listing:listing_domain",
    ],
)
