[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 HTTP API service (Walking Skeleton)"

[dependencies]
auth = { path = "../../crates/auth", version = "0.1.0" }
shared-kernel = { path = "../../crates/domain/core/shared-kernel", version = "0.1.0" }
user-domain = { path = "../../crates/domain/core/user", version = "0.1.0" }
listing-domain = { path = "../../crates/domain/core/listing", version = "0.1.0" }
listing-photo-domain = { path = "../../crates/domain/core/listing-photo", version = "0.1.0" }
bookmark-domain = { path = "../../crates/domain/insights/bookmark", version = "0.1.0" }
notification-domain = { path = "../../crates/domain/insights/notification", version = "0.1.0" }
db = { path = "../../crates/db", version = "0.1.0" }
axum = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
async-trait = { workspace = true }
ulid = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }

[lints]
workspace = true
