[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 HTTP API service (Walking Skeleton)"

[dependencies]
auth = { path = "../../crates/auth", version = "0.1.0" }
shared-kernel = { path = "../../crates/domain/core/shared-kernel", version = "0.1.0" }
user-domain = { path = "../../crates/domain/core/user", version = "0.1.0" }
listing-domain = { path = "../../crates/domain/core/listing", version = "0.1.0" }
listing-photo-domain = { path = "../../crates/domain/core/listing-photo", version = "0.1.0" }
bookmark-domain = { path = "../../crates/domain/insights/bookmark", version = "0.1.0" }
notification-domain = { path = "../../crates/domain/insights/notification", version = "0.1.0" }
parcel-domain = { path = "../../crates/domain/core/parcel", version = "0.1.0" }
building-domain = { path = "../../crates/domain/core/building", version = "0.1.0" }
geo-types = { workspace = true }
parcel-lookup = { path = "../../crates/parcel-lookup", version = "0.1.0" }
vworld-client = { path = "../../crates/data-clients/vworld", version = "0.1.0" }
raw-capture-client = { path = "../../crates/data-clients/raw-capture", version = "0.1.0" }
data-go-kr-client = { path = "../../crates/data-clients/data-go-kr", version = "0.1.0" }
circuit-breaker = { path = "../../crates/circuit-breaker", version = "0.1.0" }
db = { path = "../../crates/db", version = "0.1.0" }
axum = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
# audit 2026-05-08: /internal/auth/event 의 shared secret 검증 — constant-time 비교 (timing attack 방어).
subtle = "2"
# ADR 0026: Bronze API archive 를 R2 (S3-호환) 로 적재. etl-base-layer 의 R2Uploader 와 동일 버전 핀.
aws-config = { version = "=1.8.5", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-credential-types = "=1.2.10"
aws-sdk-s3 = { version = "=1.106.0", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-smithy-types = "=1.4.8"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
