[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Gongzzang HTTP API service"

[dependencies]
auth = { path = "../../crates/auth", version = "0.1.0" }
shared-kernel = { path = "../../crates/domain/core/shared-kernel", version = "0.1.0" }
user-domain = { path = "../../crates/domain/core/user", version = "0.1.0" }
listing-domain = { path = "../../crates/domain/core/listing", version = "0.1.0" }
listing-photo-domain = { path = "../../crates/domain/core/listing-photo", version = "0.1.0" }
bookmark-domain = { path = "../../crates/domain/insights/bookmark", version = "0.1.0" }
notification-domain = { path = "../../crates/domain/insights/notification", version = "0.1.0" }
parcel-lookup = { path = "../../crates/parcel-lookup", version = "0.1.0" }
db = { path = "../../crates/db", version = "0.1.0" }
circuit-breaker = { path = "../../crates/circuit-breaker", version = "0.1.0" }
axum = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
subtle = "2"
# Used by listing photo upload/download presigning.
aws-config = { version = "=1.8.17", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
aws-credential-types = "=1.2.14"
aws-sdk-s3 = { version = "=1.134.0", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
aws-smithy-types = "=1.4.9"

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[lints]
workspace = true
