load("//tools/bazel:rust_workspace.bzl", "gongzzang_rust_binary_with_unit_test")

package(default_visibility = ["//visibility:public"])

gongzzang_rust_binary_with_unit_test(
    name = "etl_base_layer_service",
    crate_name = "etl_base_layer",
    crate_root = "src/main.rs",
    srcs = glob(["src/**/*.rs"]),
)
