[package]
name = "etl-base-layer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 PMTiles base layer ETL — Bronze SHP fetch + tippecanoe + R2 업로드 (SP9 T3)"

[[bin]]
name = "etl-base-layer"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
# ADR 0021 decompose — `<gold>/<layer>/{z}/{x}/{y}.pbf` 산출물 walk + R2 batch upload.
walkdir = "2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
# R2 (Cloudflare R2 = S3-호환) 업로드 — SP9 T3b.1.
# rustls 강제 (workspace 정책: reqwest/sqlx 모두 rustls-tls 사용, openssl 의존 회피).
#
# 버전 핀 사유: aws-sdk-s3 1.110+ / aws-config 1.8.6+ / aws-smithy-async 1.2.11+ 이
# rustc 1.91 을 요구. workspace 의 [`rust-toolchain.toml`] 이 1.88 핀이라 호환 위해
# pre-MSRV-bump 버전으로 고정. workspace MSRV 가 1.91 로 올라갈 때 모두 latest 로 풀어도 됨.
# (Cargo.lock 의 `aws-smithy-async = "=1.2.10"` 도 같은 이유로 함께 핀)
aws-config = { version = "=1.8.5", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-sdk-s3 = { version = "=1.86.0", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-credential-types = "=1.2.5"
aws-smithy-types = "=1.3.4"

[dev-dependencies]
wiremock = { workspace = true }
tempfile = "3"

[lints]
workspace = true
