[package]
name = "etl-base-layer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Gongzzang static vector tile handover stub after platform-core Catalog ownership transfer"

[[bin]]
name = "etl-base-layer"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
sentry = { workspace = true }
sentry-tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "registry"] }

[lints]
workspace = true
