[package]
name = "outbox-publisher-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 outbox 이벤트 발행 daemon (services)"

[[bin]]
name = "outbox-publisher"
path = "src/main.rs"

[dependencies]
auth = { path = "../../crates/auth", version = "0.1.0" }
circuit-breaker = { path = "../../crates/circuit-breaker", version = "0.1.0" }
db = { path = "../../crates/db", version = "0.1.0" }
outbox-event-domain = { path = "../../crates/domain/audit/outbox-event", version = "0.1.0" }
outbox-publisher = { path = "../../crates/outbox-publisher", version = "0.1.0" }
shared-kernel = { path = "../../crates/domain/core/shared-kernel", version = "0.1.0" }
async-trait = { workspace = true }
aws-config = { version = "=1.8.17", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
aws-credential-types = "=1.2.14"
aws-sdk-s3 = { version = "=1.134.0", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }

[lints]
workspace = true
