[project]
name = "scraper-py"
version = "0.1.0"
description = "공짱 SP9 격리 Python scraper service (V-World dtmk Bronze) — ADR 0022"
requires-python = ">=3.11"

# pinned 의존성 — ADR 0022 의 *격리* 원칙에 맞춰 main Rust system 과는 무관.
# 정확한 핀 (`==`) 사용: Round 3 P0 가 `>=` range 의 *공급망 drift* 를 trick 으로 박제.
# 갱신 시 `pip-audit` 출력 후 PR 단위 검토.
dependencies = [
    "scrapling==0.4.8",
    "curl_cffi==0.15.0",
    "boto3==1.43.0",
    # Round 3 P0 — V-World HTTP 호출에 retry / circuit-breaker 격 wrap.
    # tenacity 는 DSL 이 명시적이고 typed exception 분류 지원 — `circuit-breaker` Rust crate 와
    # 동등한 retry policy (timeout / max_retries / exponential backoff).
    "tenacity==9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# 엄격 — ADR 0022 격리 service 라도 *그 안에서* SSS-grade 강제.
# 사용자 메모리 박제: trick 1개라도 거부.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports / undefined names)
    "I",   # isort (import sort)
    "B",   # flake8-bugbear (likely bugs)
    "BLE", # flake8-blind-except (`except Exception:` 차단 — Round 3 finding)
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "PL",  # pylint subset
    "S",   # flake8-bandit (security)
    "TRY", # tryceratops (exception 사용 패턴)
]
ignore = [
    "PLR0913",  # too-many-arguments — boto3 ExtraArgs / V-World 인자 수가 자연스럽게 많음
    "PLR0915",  # too-many-statements — main 함수가 dispatch + summary 라 자연 길이
    "S101",     # assert — 본 service 는 production 진입점 아님 (workflow phase 1 만)
    "TRY003",   # raise message detail — 한국어 디버깅 명시 필요
    "TRY300",   # try-else — 본 service 흐름은 try 블록 안 명시가 더 가독성
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004"]

[tool.mypy]
python_version = "3.11"
# strict-but-pragmatic — boto3 / curl_cffi 는 type stubs 가 부족해서 strict 전체 적용 시
# call-site 마다 `# type: ignore[no-untyped-call]` 박는 게 더 큰 trick. 대신 핵심 룰
# (mypy default: missing type / arg / return) 은 강제 + warn 류는 모두 활성.
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false  # boto3/cffi Session 의 Any return 이 자연 발생
disallow_untyped_defs = true       # *우리 코드* 의 missing type annotation 은 거부
disallow_incomplete_defs = true
disallow_any_generics = false      # cffi.Session 같은 외부 Generic 무인자 허용
disallow_untyped_calls = false     # boto3.client / cffi.Session() 등 untyped 호출 허용
no_implicit_optional = true
strict_equality = true

# 외부 lib stub 누락은 에러 대신 ignore (boto3 / curl_cffi / scrapling 는 stubs 부족).
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "curl_cffi", "curl_cffi.*", "scrapling", "scrapling.*", "tenacity", "tenacity.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --strict-config"
